--- a/app/assets/register.html
+++ b/app/assets/register.html
@@ -7,8 +7,8 @@
     <title>register</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat&amp;display=swap">
-    <link rel="stylesheet" href="static/assets/css/Contact-Form-Clean.css">
-    <link rel="stylesheet" href="static/assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/form.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 
 <body><section class="contact-clean">
