--- a/v1/static/login/login.html
+++ b/v1/static/login/login.html
@@ -26,7 +26,7 @@
                     <div class="collapse navbar-collapse" id="navcol-1">
                         <ul class="navbar-nav">
                             <li class="nav-item"><a class="nav-link active" href="/home">Home</a></li>
-                            <li class="nav-item"><a class="nav-link" href="/about">About</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/home">Back</a></li>
                             <li class="nav-item"></li>
                         </ul>
                     </div><button class="btn btn-dark" type="button">Log Out</button>
@@ -34,33 +34,8 @@
                         data-bs-toggle="modal">Settings</button>
                 </div>
             </nav>
-            <div class="modal fade" role="dialog" tabindex="-1" id="events">
-                <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable" role="document">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                        </div>
-                        <div class="modal-body">
-                            <form id="event-form" method="post" action="#" target="_self">
-                                <input class="form-control" type="text" placeholder="Event Name"
-                                    style="font-family: Montserrat, sans-serif;">
-                                <input class="form-control" type="text" placeholder="Event Type"
-                                    style="font-family: Montserrat, sans-serif;">
-                                <input class="form-control" type="text" placeholder="Description"
-                                    style="font-family: Montserrat, sans-serif;">
-                                <input class="form-control" type="date"
-                                    style="font-family: Montserrat, sans-serif;"><input class="form-control" type="time"
-                                    style="font-family: Montserrat, sans-serif;">
-                            </form>
-                        </div>
-                        <div class="modal-footer"><button class="btn btn-light" type="button"
-                                data-bs-dismiss="modal">Close</button><button class="btn btn-dark"
-                                type="submit">Save</button></div>
-                    </div>
-                </div>
-            </div>
-             <div class="col-auto col-xxl-12 offset-xxl-4"
-                style="width: 500px;padding: 0px 0px 0px;padding-top: 0px;padding-right: 0px;padding-left: 0px;padding-bottom: 0px;">
-
+            <div class="col-auto col-xxl-12 offset-xxl-4"
+                style="width: 500px;padding: 0px 0px 0px;padding-top: 0px;padding-right: 0px;padding-left: 0px;padding-bottom: 10px;">
 
                 <section class="content-signup">
                     <!-- To be added code for registrationform -->
