Huge commit of implementation about errors handler, new postEvent feature && table db, and a new blueprint for post events dir

--- a/v1/static/pages/homePage/index.html
+++ b/v1/static/pages/homePage/index.html
@@ -10,14 +10,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="../static/styles/home.css">
 </head>
 
 <body>
     <section class="d-flex flex-column justify-content-between" id="home">
         <div id="home_top">
             <nav class="navbar navbar-light navbar-expand-md bg-light" style="border-bottom-style: solid;border-bottom-color: rgb(0,0,0);">
-                <div class="container-fluid"><a class="navbar-brand" href="#"></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+              <div class="container-fluid"><a class="navbar-brand" href="#"></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
                     <div class="collapse navbar-collapse" id="navcol-1">
                         <ul class="navbar-nav mx-auto">
                             <li class="nav-item"><a class="nav-link active text-start" href="#" style="color: rgb(0,0,0);font-size: 20px;text-align: center;"><strong>Artists</strong></a></li>
