--- a/v1/static/oldAbout/about.html
+++ b/v1/static/oldAbout/about.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends "layout.html" %}
+{% block content %}
 
 <head>
     <meta charset="utf-8">
@@ -47,8 +47,10 @@
             </div>
             <div class="row g-0">
                 <div class="col-6" id="about_info" style="border-style: solid;">
-                    <h1 class="text-center">Kevin Ramos</h1>
-                    <p id="about_bio">Biography</p>
+                  <h1 class="text-center">Kevin Ramos</h1>
+                  <p id="about_bio">
+		    Former entrepreneur, former paintball practitioner, former graphic designer, currently EscenApp developer and student at Holberton Puerto Rico cohort 15. When the pandemic began, my goal was to restructure myself and adapt to the current reality. I want to eventually help, while I continue to develop as a programmer, the small merchant sector to give them the boost they need to be competitive.
+		  </p>
                 </div>
                 <div class="col-6"><img class="img-fluid" src="assets/img/70630575.jpg" width="100%" height="100%"></div>
             </div>
@@ -74,4 +76,4 @@
     <script src="assets/js/bs-init.js"></script>
 </body>
 
-</html>
+{% endblock content %}
