--- a/v1/static/filesToValidate/new_home/home.html
+++ b/v1/static/filesToValidate/new_home/home.html
@@ -1,35 +1,33 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends "layout.html" %}
+{% block content %}
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>EscenApp</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:300,400,600,700i&amp;display=swap">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.min.css">
-    <link rel="stylesheet" href="assets/css/artists.css">
-    <link rel="stylesheet" href="assets/css/better_about.css">
-    <link rel="stylesheet" href="assets/css/event_form.css">
-    <link rel="stylesheet" href="assets/css/events.css">
-    <link rel="stylesheet" href="assets/css/home.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+    <link rel="stylesheet" href="../static/styles/home.css">
+    <link rel="stylesheet" href="../static/images">
 </head>
 
 <body>
     <section class="d-flex flex-column justify-content-between" id="home">
         <div id="home_top">
             <nav class="navbar navbar-light navbar-expand-md bg-light" style="border-bottom-style: solid;border-bottom-color: rgb(0,0,0);">
-                <div class="container-fluid"><a class="navbar-brand" href="#"></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+                <div class="container-fluid"><a class="navbar-brand" href="/home"></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
                     <div class="collapse navbar-collapse" id="navcol-1">
                         <ul class="navbar-nav mx-auto">
                             <li class="nav-item"><a class="nav-link active text-start" href="#" style="color: rgb(0,0,0);font-size: 20px;text-align: center;"><strong>Artists</strong></a></li>
                             <li class="nav-item text-start"><a class="nav-link text-start" href="#" style="color: rgb(0,0,0);font-size: 20px;text-align: center;"><strong>Users</strong></a></li>
-                            <li class="nav-item text-start"><a class="nav-link text-start" href="#" style="color: rgb(0,0,0);font-size: 20px;text-align: center;"><strong>About</strong></a></li>
+                            <li class="nav-item text-start"><a class="nav-link text-start" href="/about" style="color: rgb(0,0,0);font-size: 20px;text-align: center;"><strong>About</strong></a></li>
                         </ul>
                         <ul class="navbar-nav ms-auto">
+			  {% if current_user.is_authenticated %}
+                          <li class="nav-item"><a class="btn btn-dark text-end" role="button" data-bss-hover-animate="flash" style="margin-right: 2px;margin-bottom: 2px;" href="/logout">Log Out</a></li>
+			  <li class="nav-item"><a class="btn btn-dark text-end" role="button" data-bss-hover-animate="flash" style="margin-right: 2px;margin-bottom: 2px;" href="/account">Account</a></li>
+			  {% else %}
                             <li class="nav-item"><a class="btn btn-dark text-end" role="button" data-bss-hover-animate="flash" style="margin-right: 2px;margin-bottom: 2px;" href="/login">Sign In</a></li>
                             <li class="nav-item"><a class="btn btn-dark text-end" role="button" data-bss-hover-animate="flash" style="margin-bottom: 2px;" href="/register">Sign Up</a></li>
                         </ul>
@@ -132,4 +130,4 @@
     <script src="assets/js/bs-init.js"></script>
 </body>
 
-</html>
+{% endblock content %}
