--- a/v1/static/filesToValidate/login/login.html
+++ b/v1/static/filesToValidate/login/login.html
@@ -3,111 +3,100 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=yes">
-    <link rel="stylesheet" href="../static/assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat&amp;display=swap">
-    <link rel="stylesheet" href="../static/assets/fonts/font-awesome.min.css">
-    <link rel="stylesheet" href="../static/assets/css/styles.min.css">
-    <link rel="stylesheet" href="../static/styles/register-style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <title>EscenApp - Add Event</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:300,400,600,700i&amp;display=swap">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.min.css">
+    <link rel="stylesheet" href="../static/styles/login.css">
+    <link rel="stylesheet" href="../static/styles/home.css">
 </head>
 
+<!-- Navbar starts -->
 <body>
-    <div id="home_top">
-        <nav class="navbar navbar-light navbar-expand-md bg-light"
-            style="border-bottom-style: solid;border-bottom-color: rgb(0,0,0);">
-            <div class="container-fluid"><a class="navbar-brand" href="/home"></a><button data-bs-toggle="collapse"
-                    class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle
-                        navigation</span><span class="navbar-toggler-icon"></span></button>
-                <div class="collapse navbar-collapse" id="navcol-1">
-                    <ul class="navbar-nav mx-auto">
-                        <li class="nav-item"><a class="nav-link active text-start" href="#artist"
-                                style="color: rgb(0,0,0);font-size: 20px;text-align: center;"><strong>Artists</strong></a>
-                        </li>
-                        <li class="nav-item text-start"><a class="nav-link text-start" href="#user"
-                                style="color: rgb(0,0,0);font-size: 20px;text-align: center;"><strong>Users</strong></a>
-                        </li>
-                        <li class="nav-item text-start"><a class="nav-link text-start" href="/about"
-                                style="color: rgb(0,0,0);font-size: 20px;text-align: center;"><strong>About</strong></a>
-                        </li>
-                    </ul>
-                    <ul class="navbar-nav ms-auto">
-                        <li class="nav-item"><a class="btn btn-dark text-end" role="button"
-                                data-bss-hover-animate="flash" style="margin-bottom: 2px;" href="/home">Back</a></li>
-                    </ul>
+    <nav class="navbar navbar-light navbar-expand-md bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="/home"></a>
+            <button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1">
+                <span class="visually-hidden">Toggle navigation</span>
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navcol-1"></div>
+            <a class="btn btn-dark" role="button" href="/home">Back</a>
+        </div>
+    </nav>
+    <main>
+        <section>
+            <div class="container">
+                <div class="row">
+                    <div class="col-6 offset-3">
+                        <div>
+                            <form class="text-center" form method="POST" action="">
+                                <h3 id="form-head" class="border-bottom ml=5">Login </h3>
+                                
+                                <!------------ Start Login Form Jinja ------------------->
+                                {{ form.hidden_tag() }}
+                                <fieldset class="form-group">
+                                <!---- EMAIL INPUT ----->
+                                    <div class="form-group">
+                                        {{ form.email.label(class="form-control-label") }}
+                                        {% if form.email.errors %}
+                                        {{ form.email(class="form-control form-control-lg is-invalid") }}
+                                        
+                                        <!-- BEGINNING OF FEEDBACK ERROR MESSAGE BLOCK -->
+                                        <div class="invalid-feedback">
+                                            {% for error in form.email.errors %}
+                                            <span>
+                                                {{ error }}
+                                            </span>
+                                            {% endfor %}
+                                        </div>
+                                        {% else %}
+                                        {{ form.email(class="form-control form-control-lg") }}
+                                        {% endif %}
+                                    </div>
+                                    <!-- Password label for input usr email -->
+                                    <div class="form-group">
+                                        {{ form.password.label(class="form-control-label") }}
+                                        {% if form.password.errors %}
+                                        {{ form.password(class="form-control form-control-lg is-invalid") }}
+                                        <div class="invalid-feedback">
+                                            {% for error in form.password.errors %}
+                                            <span>
+                                                {{ error }}
+                                            </span>
+                                            {% endfor %}
+                                        </div>
+                                        {% else %}
+                                        {{ form.password(class="form-control form-control-lg") }}
+                                        {% endif %}
+                                    </div>
+                                    <!-- END OF FEEDBACK ERROR MESSAGE BLOCK -->
+                                    <div class="form-check">
+                                        {{ form.remember(class="form-check-input") }}
+                                        {{ form.remember.label(class="form-check-label") }}
+                                    </div>
+                                    <!----- SUBMIT BUTTON ---->
+                                    <div class="form-btn" type="submit" style="margin-left: 0px; ">
+                                        {{ form.submit(class="btn btn-outline-info") }}
+                                    </div>
+                                </fieldset>
+                                <div class="border-top pt-3">
+                                    <small class="text-muted">
+                                        Need An Account?
+                                        <a class="ml-2" href="{{url_for('users.register') }}">Register</a>
+                                    </small>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </nav>
-    </div>
-
-    <div class="col-12 offset-xxl-4"
-        style="width: 500px;padding: 0px 0px 0px;padding-top: 0px;padding-right: 0px;padding-left: 0px;padding-bottom: 0px;">
-        <section class="content-signup" style="margin-top: 55px; margin-left: 50px;">
-            <h2>Log-In</h2>
-            <!-- To be added code for registrationform -->
-            <form method="POST" action"#">
-                {{ form.hidden_tag() }}
-                <fieldset class="form-group">
-                    <legend class="border-bottom mb-4"></legend>
-                    <!-- BEGINNING OF FEEDBACK ERROR MESSAGE BLOCK -->
-                    <div class="form-group" type="text" style="font-family: Montserrat, sans-serif; margin-top: 50px;">
-                        <div class="form-group">
-                            {{ form.email.label(class="form-control-label") }}
-                            {% if form.email.errors %}
-                            {{ form.email(class="form-control form-control-lg is-invalid") }}
-                            <div class="invalid-feedback">
-                                {% for error in form.email.errors %}
-                                <span>
-                                    {{ error }}
-                                </span>
-                                {% endfor %}
-                            </div>
-                            {% else %}
-                            {{ form.email(class="form-control form-control-lg") }}
-                            {% endif %}
-                        </div>
-                        <!-- Password label for input usr email -->
-                        <div class="form-group">
-                            {{ form.password.label(class="form-control-label") }}
-                            {% if form.password.errors %}
-                            {{ form.password(class="form-control form-control-lg is-invalid") }}
-                            <div class="invalid-feedback">
-                                {% for error in form.password.errors %}
-                                <span>
-                                    {{ error }}
-                                </span>
-                                {% endfor %}
-                            </div>
-                            {% else %}
-                            {{ form.password(class="form-control form-control-lg") }}
-                            {% endif %}
-                        </div>
-                        <!-- END OF FEEDBACK ERROR MESSAGE BLOCK -->
-                        <div class="form-check">
-                            {{ form.remember(class="form-check-input") }}
-                            {{ form.remember.label(class="form-check-label") }}
-                        </div>
-                </fieldset>
-                <div class="form-group">
-                    {{ form.submit(class="btn btn-outline-info") }}
-                    <small class="text-muted ml-2">
-                        <a href="{{ url_for('users.reset_request') }}">Forgot Password?</a>
-                    </small>
-                </div>
-            </form>
-            <div class="border-top pt-3">
-                <small class="text-muted">
-                    Need An Account?
-                    <a class="ml-2" href="{{url_for('users.register') }}">
-                        Register
-                    </a>
-                </small>
-            </div>
+            <!-- End Content Jinja Code -->
         </section>
-    </div>
-    </div>
-    </section>
-    <script src="../static/assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="../static/assets/js/smart-forms.min.js"></script>
-    <script src="../static/assets/js/script.min.js"></script>
+    </main>
 </body>
 {% endblock %}
