--- a/v1/static/filesToValidate/events/new-event.html
+++ b/v1/static/filesToValidate/events/new-event.html
@@ -10,10 +10,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
   <link rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.min.css">
-  <link rel="stylesheet" href="../static/styles/artists.css">
-  <link rel="stylesheet" href="../static/styles/about.css">
-  <!--link rel="stylesheet" href="../sttatic/styles/new-event.css"-->
-  <link rel="stylesheet" href="../static/styles/login.css">
+  <link rel="stylesheet" href="../static/styles/new-event.css">
   <link rel="stylesheet" href="../static/styles/home.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 </head>
@@ -32,96 +29,94 @@
       <div class="container">
         <div class="row">
           <div class="col-6 offset-3">
-            <div>
-              <form method="POST" action="">
-                {{ form.hidden_tag() }}
-                <fieldset class="form-group">
-                  <!-- BEGINNING OF FEEDBACK ERROR MESSAGE BLOCK -->
-                  <legend class="border-bottom ml-4">{{ legend }}</legend>
-                  <div class="form-group">
-                    <!-- Title label for input usr email -->
-                    <div class="form-group">
-                      {{ form.title.label(class="form-control-label") }}
+            <h1 style="border-style: double;">{{ legend }}
+              <legend class="border-bottom"> </legend>
+            </h1>
+            <form method="POST" action="">
+              {{ form.hidden_tag() }}
+              <fieldset class="form-group">
+                <!-- BEGINNING OF FEEDBACK ERROR MESSAGE BLOCK -->
+                <!-- Title label for input usr email -->
+                <div class="form-group">
+                  {{ form.title.label(class="form-control-label") }}
 
-                      {% if form.title.errors %}
-                      {{ form.title(class="form-control form-control-lg is-invalid") }}
-                      <div class="invalid-feedback">
-                        {% for error in form.title.errors %}
-                        <span>
-                          {{ error }}
-                        </span>
-                        {% endfor %}
-                      </div>
-                      {% else %}
-                      {{ form.title(class="form-control form-control-lg") }}
-                      {% endif %}
-                    </div>
-                    <!-- Event Type label for input usr email -->
-                    <div class="form-group">
-                      {{ form.eventType.label(class="form-control-label") }}
-                      {% if form.eventType.errors %}
-                      {{ form.eventType(class="form-control form-control-lg is-invalid") }}
-                      <div class="invalid-feedback">
-                        {% for error in form.eventType.errors %}
-                        <span>
-                          {{ error }}
-                        </span>
-                        {% endfor %}
-                      </div>
-                      {% else %}
-                      {{ form.eventType(class="form-control form-control-lg") }}
-                      {% endif %}
-                    </div>
-                    <!-- Description label for input usr below -->
-                    <div class="form-group">
-                      {{ form.description.label(class="form-control-label") }}
+                  {% if form.title.errors %}
+                  {{ form.title(class="form-control form-control-lg is-invalid") }}
+                  <div class="invalid-feedback">
+                    {% for error in form.title.errors %}
+                    <span>
+                      {{ error }}
+                    </span>
+                    {% endfor %}
+                  </div>
+                  {% else %}
+                  {{ form.title(class="form-control form-control-lg") }}
+                  {% endif %}
+                </div>
+                <!-- Event Type label for input usr email -->
+                <div class="form-group">
+                  {{ form.eventType.label(class="form-control-label") }}
+                  {% if form.eventType.errors %}
+                  {{ form.eventType(class="form-control form-control-lg is-invalid") }}
+                  <div class="invalid-feedback">
+                    {% for error in form.eventType.errors %}
+                    <span>
+                      {{ error }}
+                    </span>
+                    {% endfor %}
+                  </div>
+                  {% else %}
+                  {{ form.eventType(class="form-control form-control-lg") }}
+                  {% endif %}
+                </div>
+                <!-- Description label for input usr below -->
+                <div class="form-group">
+                  {{ form.description.label(class="form-control-label") }}
 
-                      {% if form.description.errors %}
-                      {{ form.description(class="form-control form-control-lg is-invalid") }}
-                      <div class="invalid-feedback">
-                        {% for error in form.description.errors %}
-                        <span>
-                          {{ error }}
-                        </span>
-                        {% endfor %}
-                      </div>
-                      {% else %}
-                      {{ form.description(class="form-control form-control-lg") }}
-                      {% endif %}
-                    </div>
-                    <!-- Date label for input usr below -->
-                    <div class="form-group">
-                      {{ form.date.label(class="form-control-label") }}
-                      {{ form.date(class="form-control form-control-lg") }}
-                    </div>
-                    <!-- Hour label for input usr below -->
-                    <div class="form-group">
-                      {{ form.hour.label(class="form-control-label") }}
-                      {% if form.hour.errors %}
-                      {{ form.hour(class="form-control form-control-lg is-invalid") }}
-                      <div class="invalid-feedback">
-                        {% for error in form.hour.errors %}
-                        <span>
-                          {{ error }}
-                        </span>
-                        {% endfor %}
-                      </div>
-                      {% else %}
-                      {{ form.hour(class="form-control form-control-lg") }}
-                      {% endif %}
-                    </div>
-                    <!-- END OF FEEDBACK ERROR MESSAGE BLOCK -->
-                </fieldset>
+                  {% if form.description.errors %}
+                  {{ form.description(class="form-control form-control-lg is-invalid") }}
+                  <div class="invalid-feedback">
+                    {% for error in form.description.errors %}
+                    <span>
+                      {{ error }}
+                    </span>
+                    {% endfor %}
+                  </div>
+                  {% else %}
+                  {{ form.description(class="form-control form-control-lg") }}
+                  {% endif %}
+                </div>
+                <!-- Date label for input usr below -->
+                <div class="form-group">
+                  {{ form.date.label(class="form-control-label") }}
+                  {{ form.date(class="form-control form-control-lg") }}
+                </div>
+                <!-- Hour label for input usr below -->
+                <div class="form-group">
+                  {{ form.hour.label(class="form-control-label") }}
+                  {% if form.hour.errors %}
+                  {{ form.hour(class="form-control form-control-lg is-invalid") }}
+                  <div class="invalid-feedback">
+                    {% for error in form.hour.errors %}
+                    <span>
+                      {{ error }}
+                    </span>
+                    {% endfor %}
+                  </div>
+                  {% else %}
+                  {{ form.hour(class="form-control form-control-lg") }}
+                  {% endif %}
+                </div>
+                <!-- END OF FEEDBACK ERROR MESSAGE BLOCK -->
                 <div class="form-group">
                   {{ form.submit(class="btn btn-outline-info") }}
                 </div>
-              </form>
-            </div>
+              </fieldset>
+            </form>
           </div>
         </div>
       </div>
     </section>
   </main>
-
 </body>
 {% endblock %}
